# FacilityManagement

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  .gitignore  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_waitlist.py  002_users.py  003_locations.py  004_departments.py  005_update_users_fk.py  006_add_location_geo.py  007_shifts.py  008_attendance.py  009_add_supervisor_id.py  cd218597577c_make_check_in_time_nullable.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  seed.py
backend/app/models/: attendance.py  department.py  location.py  shift.py  user.py  waitlist.py
backend/app/routers/: __init__.py  analytics.py  attendance.py  departments.py  locations.py  shifts.py  users.py  waitlist.py
backend/app/schemas/: attendance.py  department.py  location.py  shift.py  user.py  waitlist.py
backend/app/services/: attendance.py  geo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  attendance.ts
frontend/src/components/: CheckInButton.tsx  GPSPermissionBanner.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: AppHeader.tsx  AppSidebar.tsx  DashboardLayout.tsx  index.ts  (+1 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useGPS.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  EmployeeDashboard.tsx  LandingPage.tsx  Login.tsx  Register.tsx  Setup.tsx  SupervisorDashboard.tsx
(+13 files in other folders)
