[project]
name = "spoorthifm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "authx==1.5.0",
    "bcrypt==4.2.1",
    "fastapi==0.115.5",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.6.1",
    "pydantic[email]>=2.10.5,<3.0.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "reportlab==4.2.5",
    "sqlalchemy==2.0.36",
    "uvicorn==0.34.0",
    "xlsxwriter==3.2.0",
]
